<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="warningsigns">Warning Signs</string>
    <string name="copingstrategies">Coping Strategies</string>
    <string name="placesfordistraction">Places for Distraction</string>
    <string name="contacts">Contacts</string>
    <string name="professionals">Professionals</string>
    <string name="makingenvironmentsafe">Making Environment Safe</string>
    <string name="extranote">Other</string>
    <string name="reasontolive">Reasons to Live</string>
    <string name="warningsignsquestion">What sort of thoughts, images, moods, situations, or behaviors indicate to you that a crisis may be developing? (Ex. Urges to drink, sleeping more than usual, skipping responsibilities) </string>
    <string name="warningsignsenter">Warning signs: </string>
    <string name="copingstrategiesquestion">What are some things that you can do on your own to help you not act on thoughts / urges to harm yourself? (Ex. television, exercise, games)</string>
    <string name="copingstrategiesenter">Coping strategies: </string>
    <string name="callhelpline">Call Helpline</string>
    <string name="instructionoptions">Suicidal thoughts can seem like they will last forever – but for many, these thoughts and feelings pass. Having a plan in place that can help guide you through difficult moments can make a difference and keep you safe. Below are various ways to fill out this safety plan. </string>
    <string name="option1">Option 1:  Work with Therapist</string>
    <string name="option2">Option 3: </string>
    <string name="option3">Option 2: </string>
    <string name="watchvideo">Watch Video</string>
    <string name="option1description">Ideally, the best way to develop this plan is to work jointly with your counselor or therapist. Bring this application to your next appointment and fill it out with them. </string>
    <string name="option2description">You can also press the button above to call the national suicide prevention lifeline and fill out the safety plan with the assistance of a Lifeline counselor. Once you reach a counselor, put the call on speakerphone and navigate back to this application. </string>
    <string name="option3description">You can also watch the above YouTube video and then fill out the safety plan on your own. </string>
    <string name="intro1">Struggling with thoughts of suicide?</string>
    <string name="intro2">A safety plan can help guide you through difficult moments.</string>
    <string name="introbutton">Get Started</string>
    <string name="coping1title">Promise not to do anything right now</string>
    <string name="coping1description">Even if you are in a lot of pain, give yourself some distance between thoughts and action. Make a promise to yourself. For example, "I won\'t do anything drastic in the next 24 hours." Or wait a week. Thoughts and actions are two different things. There\'s no deadline. Wait so you can put some distance between your thoughts and actions. </string>
    <string name="coping2title">Follow the Safety Plan</string>
    <string name="coping2description">Do activities that have helped you cope in the past, reflect on your reasons to live, go to a safe place to distract yourself, or contact friends / family / professionals. If this is not enough or not possible, go to the Emergency Tab and reach out for help.
</string>
    <string name="coping3title">Avoid dangerous substances / objects</string>
    <string name="coping3description">Suicidal thoughts can become even stronger when you have taken drugs or alcohol. In addition, remove yourself from places where you may have access to things that you can use to hurt yourself.
</string>
    <string name="coping4title">Reach out</string>
    <string name="coping4description">If you are worried that you may lose control or do something to hurt yourself, tell someone. Make sure you are around someone you trust.</string>
    <string name="coping5title">Do the opposite of how you feel</string>
    <string name="coping5description">When you have thoughts of suicide, it can be helpful to do the opposite of how you feel. For example, when people feel depressed they usually want to be alone. Doing the opposite can help with feelings of depression.
</string>
    <string name="coping6title">Problem-solve</string>
    <string name="coping6description">Think of ways that you can potentially solve your problems. Make a list of all of the problems you are dealing with right now. Then, make a list of all of the solutions you can think of to those problems. Asking someone you trust to help you with this can be useful. Dealing with one or two small problems can help to put an end to immediate feelings of suicide. Once you are thinking more clearly, you can tackle other bigger problems.
</string>
    <string name="recovering1title">Reach out for help</string>
    <string name="recovering1description">	Get professional support by talking to your doctor or by going to other resources available online. Many times, suicidal thoughts are caused by clinical depression or other mental illnesses. Mental health professionals such as a therapist or a psychiatrist can help you overcome these problems. In addition, there may be support groups in the area that can help you share your experiences and listen to the experiences of others in an understanding manner.
</string>
    <string name="recovering2title">Make a schedule</string>
    <string name="recovering2description">	Follow a routine for yourself every day and stick to it as closely as possible. For example, wake up at a regular time, sleep at a regular time, and have regular planned activities in your day such as exercising or showering.
</string>
    <string name="recovering3title">Take care of yourself</string>
    <string name="recovering3description">It\'s important to take good care of yourself. Strategies that have been shown to improve your mood are exercising, getting proper nutrition, sleeping well, getting more sunlight, and forming supportive relationships.
</string>
    <string name="recovering4title">Identify signs of suicidal thoughts</string>
    <string name="recovering4description">	In the Safety Plan you can identify warning signs of a suicidal crisis, such as certain situations, places, or people. Try to find ways to avoid these triggers.
</string>
    <string name="recovering5title">Things to avoid</string>
    <string name="recovering5description">• Being alone\n• Alcohol and drugs\n• Doing things that make you feel worse\n• Ruminating about suicide \n
</string>
    <string name="prevention1title">Introduction</string>
    <string name="prevention1description">	People dealing with suicidal thoughts don\'t necessarily want to die - they just want to stop the pain. Please take any signs of suicidal thought seriously. In this guide we will cover the warning signs of suicide, how to talk to a suicidal person about suicide, responding to a suicidal crisis, and supporting them during recovery.
</string>
    <string name="prevention2title">Warning signs of suicide</string>
    <string name="prevention2description">It is important to recognize the warning signs of suicide and to take them seriously. \n\nAntidepressant warning - While antidepressants have been shown to be helpful in reducing suicidal thoughts, varying reactions to different antidepressants means that for some, the first time on antidepressants or changes in antidepressant type / dose increase the risk of suicide. It is critical to monitor someone because the <b> risk of suicide is greatest during the first two months of new antidepressant treatment.</b>
    \n\n Warning Signs: \n\n
            • Talking about wanting to die or to kill oneself.\n
			• Looking for a way to kill oneself, such as searching online or buying a gun.\n
			• Talking about feeling hopeless or having no reason to live.\n
			• Talking about feeling trapped or in unbearable pain.\n
			• Talking about being a burden to others.\n
			• Increasing the use of alcohol or drugs.\n
			• Acting anxious or agitated; behaving recklessly.\n
			• Sleeping too little or too much.\n
			• Withdrawn or feeling isolated.\n
			• Showing rage or talking about seeking revenge.\n
			• Displaying extreme mood swings.\n
			• Preoccupation with death.\n
			• Suddenly happier, calmer.\n
			• Loss of interest in things one cares about.\n
			• Visiting or calling people to say goodbye.\n
			• Making arrangements; setting one\'s affairs in order.\n
			• Giving things away, such as prized possessions.
    </string>
    <string name="prevention3title">Talking to a suicidal person</string>
    <string name="prevention3description">If you think a friend or family member is considering suicide, you might be afraid to bring up the subject. However, talking openly about suicidal thoughts and feelings can save a life. The easiest way to start the conversation is simply to ask: Are you having thoughts of suicide?\n\n
        • Be direct. Talk openly and matter-of-factly about suicide.\n
		• Be willing to listen. Allow expressions of feelings. Accept the feelings.\n
		• Be non-judgmental. Don\'t debate whether suicide is right or wrong, or whether feelings are good or bad. Don\'t lecture on the value of life.\n
		• Get involved. Become available. Show interest and support.\n
		• Don\'t dare him or her to do it.\n
		• Don\'t act shocked. This will put distance between you.\n
		• Don\'t be sworn to secrecy. Seek support.\n
		• Offer hope that alternatives are available but do not offer glib reassurance.\n
		• Take action. Remove means, such as guns or stockpiled pills.\n
		• Get help from persons or agencies specializing in crisis intervention and suicide prevention.
</string>
    <string name="prevention4title">Respond quickly in a crisis</string>
    <string name="prevention4description">
        When somebody tells you they are thinking about suicide, you can start with evaluating the level of suicide risk that the person is in. \n\n
		Level of suicide risk\n
			• Low - thoughts of suicide, but no plan or intent\n
			• Medium - thoughts of suicide with vague plan, but no suicidal actions\n
			• High - thoughts of suicide with specific plan \n
			• Very high - thoughts of suicide with specific plan and intent to carry out the plan\n\nIf a suicide attempt seems imminent, call a local crisis center, dial 911, or take the person to an emergency room. Remove guns, drugs, knives, and other potentially lethal objects from the vicinity but do not, under any circumstances, leave a suicidal person alone.
    </string>
    <string name="prevention5title">Support during recovery</string>
    <string name="prevention5description">Remove potential means of suicide - Remove knives, guns, and other potential lethal objects from the suicidal person. If he or she is likely to overdose on pills, then keep medications with you and give them out only as necessary to follow the prescription.
		\n\nGet them professional help - Encourage the person to seek a mental health professional, be it a doctor or therapist. You can call a crisis line for help and guidance, even if you yourself are not suicidal.
		\n\nSupport them - Ask the person every once in a while how he or she is feeling so that if the person is going through another suicidal crisis, you can ensure they are not alone. Encourage the person to reach out to you if they are feeling acutely suicidal.
		\n\nTake care of yourself - It can be emotionally difficult to support a person for an extended period of time. It is important for you to make sure your own health and happiness are solid. While you cannot simply control the suicidal person and make them better, you can control how well you take care of yourself.
    </string>
</resources>