<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.moodtools.crisis.app.GuideRecovering">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovering1title"
            android:textColor="@color/mainblue"
            android:fontFamily="sans-serif-light"
            android:textSize="22sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/recovering1description"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:background="@color/lightgray" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovering2title"
            android:textColor="@color/mainblue"
            android:fontFamily="sans-serif-light"
            android:textSize="22sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/recovering2description"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:background="@color/lightgray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovering3title"
            android:textColor="@color/mainblue"
            android:fontFamily="sans-serif-light"
            android:textSize="22sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/recovering3description"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:background="@color/lightgray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovering4title"
            android:textColor="@color/mainblue"
            android:fontFamily="sans-serif-light"
            android:textSize="22sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/recovering4description"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:background="@color/lightgray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovering5title"
            android:textColor="@color/mainblue"
            android:fontFamily="sans-serif-light"
            android:textSize="22sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/recovering5description"
            android:textSize="15sp"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:background="@color/lightgray" />


    </LinearLayout>
    </ScrollView>