<RelativeLayout
    android:background="@color/mainblue"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.moodtools.crisis.app.FirstLaunch">



    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:src="@drawable/largecross"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/intro1"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/white"
        android:id="@+id/introtextview1"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/imageView"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:fontFamily="sans-serif-light"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/intro2"
        android:gravity="center_horizontal"
        android:id="@+id/introtextview2"
        android:layout_below="@+id/introtextview1"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/introbutton"
        android:id="@+id/introbutton"
        android:fontFamily="sans-serif-light"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:onClick="introbuttonclick"
        android:background="@drawable/introbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



</RelativeLayout>